Add styles for layout and design in index.html
Added CSS styles for layout and design.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
 <!doctype html>
 <html lang="en">
+<style>
+  :root{--blue:#0056b3;--yellow:#ffcc00}
+body{font-family:Arial,Helvetica,sans-serif;background:#fff;color:var(--blue);margin:0;padding:20px;display:flex;align-items:center;justify-content:center;min-height:100vh}
+.card{max-width:480px;width:100%;border-radius:10px;padding:24px;box-shadow:0 6px 18px rgba(0,0,0,0.06);border:1px solid #e6eef9;text-align:center}
+h1{margin:0 0 8px;font-size:1.6rem}
+.lead{color:rgba(0,86,179,0.9);margin-bottom:16px}
+label{display:block;text-align:left;margin-top:12px;font-weight:600}
+input,select{width:100%;padding:10px;margin-top:6px;border:2px solid var(--blue);border-radius:6px;box-sizing:border-box}
+.note{margin:10px 0;color:var(--blue)}
+button, .btn{background:var(--yellow);color:var(--blue);border:none;padding:12px 18px;border-radius:8px;font-weight:700;cursor:pointer;text-decoration:none;display:inline-block;margin-top:14px}
+.small{font-size:0.85rem;color:rgba(0,86,179,0.9);margin-top:12px}
+footer{font-size:0.85rem;color:#666;margin-top:18px}
+
+</style>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
